[JAVA-40679] Moved article "Mock Static Method using JMockit" from mocks to mocks-2