@@ -41,13 +41,41 @@
             <artifactId>jimfs</artifactId>
             <version>${jimf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>${jmockit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
+                        -Djdk.attach.allowAttachSelf
+                    </argLine>
+                    <disableXmlReport>true</disableXmlReport>
+                    <excludes>
+                        <exclude>**/testsuite/**/*UnitTest.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <datafaker.version>1.6.0</datafaker.version>
         <spring-test.version>5.3.25</spring-test.version>
         <jukito.version>1.5</jukito.version>
         <jimf.version>1.1</jimf.version>
+        <jmockit.version>1.49</jmockit.version>
     </properties>
 
 </project>
